--- a/sass/components/modal-form/_modal-form-policy.scss
+++ b/sass/components/modal-form/_modal-form-policy.scss
@@ -39,6 +39,7 @@
 
 .modal-form__heckbox-custom {
   margin-right: 7px;
+  min-width: 16px;
   width: 16px;
   height: 15px;
   border: 2px solid var(--title-text-color);
