--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -19,6 +19,10 @@
     text-transform: uppercase;
 
     color: #fff;
+
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+    }
   }
 }
 
@@ -39,6 +43,7 @@
   margin-left: auto;
   margin-right: auto;
   flex-direction: column;
+  align-items: baseline;
 
   @media screen and (min-width: 768px) {
     flex-direction: row;
