--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -104,14 +104,21 @@
   transform: translatey(100%);
   transition: transform 250ms var(--timing-function);
 
+  @media screen and (max-width: 380px) {
+    height: 250px;
+  }
+
   &__text {
     font-size: 18px;
-    font-style: 1.2;
     font-weight: 400;
     line-height: 1.55;
     letter-spacing: 0.54px;
 
     color: #fff;
+
+    @media screen and (max-width: 380px) {
+      font-size: 16px;
+    }
   }
 
   .card__link:hover &,
